fix: desktop:overflow-y-hidden

--- a/resources/tailwind.css
+++ b/resources/tailwind.css
@@ -873,14 +873,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 100vh;
   }
 
-  .desktop\:h-\[50rem\] {
-    height: 50rem;
-  }
-
-  .desktop\:h-\[55rem\] {
-    height: 55rem;
-  }
-
   .desktop\:h-\[52\.5rem\] {
     height: 52.5rem;
   }
